# FoundationModelComparison

./: .gitignore  README.md  calc_metrics.py  download_CCMCT.py  download_MIDOG2022.py  download_MIDOGpp.py  extract_features.py  linear_probing.py  pyproject.toml  train_baseline.py  train_baseline_cross_domain.py  train_classifier.py  train_classifier_tumor_specific.py
databases/: MIDOG2022_training_debug_png.csv  MIDOG2022_training_debug_tiff.csv  MIDOG2022_training_png.csv  MIDOG2022_training_tiff.csv  MIDOGpp.csv  MITOS_WSI_CCMCT_ODAEL_binary_labels.csv
scripts/: 01_example_extract_features.sh  02_example_linear_probing.sh  03_example_train_baseline.sh  04_example_calc_metrics_baseline.sh  README.md
scripts/01_MIDOG2022_vit_mini_example_linear_probing/: README.md  run_midog_vit_mini_example.sh
scripts/02_MIDOG2022_vit_full_example_linear_probing/: README.md  run_midog_vit_full_example.sh
scripts/03_MIDOGpp_vit_full_example_linear_probing/: README.md  run_midogpp_vit_full_example.sh
scripts/04_MIDOGpp_vit_example_lora/: README.md  run_midogpp_vit_example_lora.sh
scripts/05_MIDOGpp_vit_example_cross_domain_lora/: README.md  run_midogpp_cross_domain_lora.sh
src/: classifier.py  dataset.py  linear_probe.py  logistic_regression.py  metrics.py  utils.py
